<resources>
    <string name="app_name">Overwatch</string>

    <string name="none_paired">none paired</string>
    <string name="scanning">scanning</string>
    <string name="select_device">select device</string>
    <string name="none_found">none found</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bluetooth_serial_communication">BluetoothSerialCommunication
    </string>
    <string name="mainMenu">MainMenu</string>
    <string name="bluetoothSerialCommunication">Bluetooth Serial Communication</string>
    <string name="bluetoothSerialCommunicationText">Bluetooth Serial Communication</string>
    <string name="open">Open</string>
    <string name="send">Send</string>
    <string name="label">Label</string>
    <string name="title_activity_bluetooth_remote_control">BluetoothRemoteControl</string>
    <string name="forward">F</string>
    <string name="left">L</string>
    <string name="right">R</string>
    <string name="backward">B</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="select">select</string>
    <string name="start">START</string>
    <string name="bluetoothRemoteControl">BLUETOOTH REMOTE CONTROL</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_btn_draw">Draw Route</string>
    <string name="search">Search</string>
    <string name="maptype">Map Type</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="sendlatlng">send lat/lng</string>
    <string name="plotRoute">Plot Route</string>
    <string name="bluetoothSetup">Bluetooth Setup</string>
    <string name="title_activity_bluetooth_setup">BluetoothSetup</string>
    <string name="startRoute">Start Route</string>
    <string name="stopRoute">Stop Route</string>
    <string name="uadLoc">UAD LOC</string>
    <string name="stop">Stop</string>
    <string name="loc">Loc</string>
    <string name="startSmall">Start</string>
    <string name="bSXOpen">OPEN</string>
    <string name="enterAddressOrSearch">Enter Address or Search</string>
    <string name="discover">Discover</string>
    <string name="close">CLOSE</string>
    <string name="enable">ENABLE</string>
    <string name="scan">SCAN</string>
    <string name="viewpaired">VIEW PAIRED</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="scan2">Scan</string>
    <string name="newDevices">New Devices</string>
    <string name="pairedDevices">Paired Devices</string>
    <string name="discoverDevices">Discover Devices</string>
    <string name="selectDevie">Select Device</string>
    <string name="selectBluetoothDevice">1.Select Bluetooth Device</string>
    <string name="uadLocation">UAD LOC</string>
</resources>
