<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wichita.overwatch.overwatch.BluetoothRemoteControl"
    android:id="@+id/BluetoothRemoteControl"
    android:background="@drawable/wsu01">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:id="@+id/forward"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffff"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:id="@+id/left"
        android:layout_toLeftOf="@+id/right"
        android:layout_below="@+id/forward"
        android:background="#ffffff"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:id="@+id/right"
        android:layout_alignTop="@+id/left"
        android:layout_toLeftOf="@+id/b"
        android:background="#ffffff"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backward"
        android:id="@+id/backward"
        android:layout_alignLeft="@+id/forward"
        android:layout_alignStart="@+id/forward"
        android:layout_below="@+id/forward"
        android:background="#ffffff" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:id="@+id/a"
        android:background="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/b"
        android:layout_alignEnd="@+id/b" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:id="@+id/b"
        android:layout_below="@+id/a"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:id="@+id/select"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
