<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wichita.overwatch.overwatch.BluetoothSetup"
    android:background="@drawable/wsu01">

    <TextView
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:id="@+id/bSXTextView01"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/bSXOpen"
        android:id="@+id/bSXOpenButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:layout_marginBottom="5dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/bSXCloseButton"
        android:layout_below="@+id/bSXOpenButton"
        android:layout_alignLeft="@+id/bSXOpenButton"
        android:layout_alignStart="@+id/bSXOpenButton"
        android:background="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/selectDevie"
        android:id="@+id/bsXDiscoverButton"
        android:layout_below="@+id/instruction02"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffff"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/selectBluetoothDevice"
        android:id="@+id/instruction01"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="2.Open Bluetooth Device"
        android:id="@+id/instruction02"
        android:textColor="#ffffff"
        android:layout_below="@+id/instruction01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
