<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wichita.overwatch.overwatch.DeviceListActivity"
    android:background="@drawable/wsu01">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan2"
        android:id="@+id/button_scan"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#ffffff" />

    <ListView
        android:layout_width="100dp"
        android:layout_height="400dp"
        android:id="@+id/paired_devices"
        android:layout_below="@+id/title_paired_devices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="100dp"
        android:layout_height="400dp"
        android:id="@+id/new_devices"
        android:layout_alignTop="@+id/paired_devices"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pairedDevices"
        android:id="@+id/title_paired_devices"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/newDevices"
        android:id="@+id/title_new_devices"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/new_devices"
        android:layout_alignEnd="@+id/new_devices" />

</RelativeLayout>
